--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
-    "next": "^16.0.0",
+    "next": "^16.0.3",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
@@ -49,7 +49,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.0.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
